# KRCppLibraryTemplate

./: CMakeLists.txt  OpenCppCoverage.conf  README.md  gcovr.cfg
.github/workflows/: check-code-sytle.yml  cmake-multi-platform.yml  codecov.yml
cmake/: dependencies.cmake
include/: CMakeLists.txt
packaging/: CMakeLists.txt  ProjectConfig.cmake.in
src/: CMakeLists.txt  version.cpp.in
tests/: CMakeLists.txt
tests/cmake/: dependencies.cmake
tests/include/: CMakeLists.txt
tests/src/: CMakeLists.txt  test_hello.cpp
